--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,46 @@
     "ostream": "cpp",
     "cmath": "cpp",
     "string": "cpp",
-    "cstring": "cpp"
+    "cstring": "cpp",
+    "array": "cpp",
+    "cwchar": "cpp",
+    "vector": "cpp",
+    "exception": "cpp",
+    "initializer_list": "cpp",
+    "iosfwd": "cpp",
+    "istream": "cpp",
+    "new": "cpp",
+    "sstream": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "utility": "cpp",
+    "iostream": "cpp",
+    "atomic": "cpp",
+    "*.tcc": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "ctime": "cpp",
+    "cwctype": "cpp",
+    "deque": "cpp",
+    "unordered_map": "cpp",
+    "algorithm": "cpp",
+    "map": "cpp",
+    "memory": "cpp",
+    "memory_resource": "cpp",
+    "optional": "cpp",
+    "set": "cpp",
+    "string_view": "cpp",
+    "system_error": "cpp",
+    "fstream": "cpp",
+    "iomanip": "cpp",
+    "limits": "cpp",
+    "typeinfo": "cpp"
   }
 }
